Bug 448672 - [Infocenter] Coming from "Energy" tab and clicking on "Systemmonitor" opens it but shows old title "Energy"
Summary: [Infocenter] Coming from "Energy" tab and clicking on "Systemmonitor" opens i...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: 5.23.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-17 20:08 UTC by postix
Modified: 2022-01-20 12:25 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Screenshot (386.80 KB, image/png)
2022-01-17 20:08 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2022-01-17 20:08:39 UTC
Created attachment 145595 [details]
Screenshot

SUMMARY


STEPS TO REPRODUCE
1.  Open the Infocenter
2. Click on the Energy tab
3. Click on Systemmonitor

OBSERVED RESULT
1. The Systemmonitor application starts 
2. The tab changes to "Systemmonitor" in the Infocenter, but the top heading still shows "energy"


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon Unstable
KDE Plasma Version:  5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Wayland
Comment 1 Fushan Wen 2022-01-18 16:40:36 UTC
Can't reproduce on 5.23.5. Should be a regression.
Comment 2 Bug Janitor Service 2022-01-20 11:57:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/113
Comment 3 Alexander Lohnau 2022-01-20 12:24:36 UTC
Git commit aaf5eb77dcc263d82121ce4f338a598068f78eab by Alexander Lohnau.
Committed on 20/01/2022 at 11:55.
Pushed by fusionfuture into branch 'master'.

Fix setting of headings for external modules

Because we do not have a KCModuleProxy where we later read the metadata and consequently name from,
we have to do it manually.
FIXED-IN: 5.24

M  +1    -0    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/aaf5eb77dcc263d82121ce4f338a598068f78eab
Comment 4 Fushan Wen 2022-01-20 12:25:17 UTC
Git commit 0eba05b076b2c945c3e6ddb8aef028ed0ceadb6a by Fushan Wen, on behalf of Alexander Lohnau.
Committed on 20/01/2022 at 12:25.
Pushed by fusionfuture into branch 'Plasma/5.24'.

Fix setting of headings for external modules

Because we do not have a KCModuleProxy where we later read the metadata and consequently name from,
we have to do it manually.
FIXED-IN: 5.24


(cherry picked from commit aaf5eb77dcc263d82121ce4f338a598068f78eab)

M  +1    -0    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/0eba05b076b2c945c3e6ddb8aef028ed0ceadb6a