Fix setting of headings for external modules

Because we do not have a KCModuleProxy where we later read the metadata and consequently name from,
we have to do it manually.

BUG: 448672
FIXED-IN: 5.24