core/ModuleView.cpp
@@ -248,6 +248,7 @@ void ModuleView::addModule(MenuItem *item, const QStringList &args)
     if (item->isExternalAppModule()) {
         auto *externalWidget = new ExternalAppModule(this, KService::Ptr(new KService(item->metaData().metaDataFileName())));
         moduleScroll->setWidget(externalWidget);
+        d->mCustomHeader->setText(item->metaData().name()); // We have to set this manually, BUG: 448672
     } else { // It must be a normal module then
         auto *moduleProxy = new KCModuleProxy(data, moduleScroll, args);
         moduleScroll->setWidget(moduleProxy);
